--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,10 @@ jobs:
       - name: Create ZIP archive
         run: |
           cd target/release
-          zip biomon.zip biomon sqlite3.dll
+          if [[ "${{ matrix.target }}" == "x86_64-unknown-linux-gnu" ]]; then
+            zip biomon.zip biomon sqlite3
+          elif [[ "${{ matrix.target }}" == "x86_64-pc-windows-gnu" ]]; then
+            zip biomon.zip biomon sqlite3.dll
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
@@ -42,13 +45,13 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v3
         with:
-          name: biomon-${{ matrix.target }}
+          name: biomon-${{ matrix.target }}.zip
           path: .
       
       - name: Create release
         uses: softprops/action-gh-release@v1
         with:
-          files: biomon-${{ matrix.target }}
+          files: biomon-${{ matrix.target }}.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
