--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           if [[ "${{ matrix.target }}" == "x86_64-unknown-linux-gnu" ]]; then
             zip biomon.zip biomon sqlite3
           elif [[ "${{ matrix.target }}" == "x86_64-pc-windows-gnu" ]]; then
-            zip biomon.zip biomon sqlite3.dll
+            zip biomon.zip biomon.exe sqlite3.dll
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
