--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+btleplug = "0.11.6"
 chrono = "0.4.38"
-rusqlite = {version = "0.32.1", features = ["bundled"] }
+futures = "0.3.31"
+ini = "1.3.0"
+rusqlite = {version = "0.32.1", features = ["bundled", "backup"] }
+tokio = { version = "1.40.0", features = ["full"] }
+uuid = "1.10.0"
