--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,10 @@ edition = "2021"
 [dependencies]
 btleplug = "0.11.6"
 chrono = "0.4.38"
+fern = "0.6.2"
 futures = "0.3.31"
 ini = "1.3.0"
+log = "0.4.22"
 rusqlite = {version = "0.32.1", features = ["bundled", "backup"] }
 tokio = { version = "1.40.0", features = ["full"] }
 uuid = "1.10.0"
